crates/vite_task_bin/tests/e2e_snapshots/fixtures/input-negative-glob-subpackage/snapshots/dotdot positive glob - hit on unmatched file change.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run sub-pkg#dotdot-positive
~/packages/sub-pkg$ vtt print-file ../shared/src/utils.ts
export const shared = 'initial';
> vtt replace-file-content packages/shared/dist/output.js initial modified

> vt run sub-pkg#dotdot-positive
~/packages/sub-pkg$ vtt print-file ../shared/src/utils.ts ◉ cache hit, replaying
export const shared = 'initial';

---
vt run: cache hit, <duration> saved.
