crates/vite_task_bin/tests/e2e_snapshots/fixtures/input-negative-glob-subpackage/snapshots/dotdot positive negative - hit on excluded sibling file.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run sub-pkg#dotdot-positive-negative
~/packages/sub-pkg$ vtt print-file ../shared/src/utils.ts ../shared/dist/output.js
export const shared = 'initial';
// initial output
> vtt replace-file-content packages/shared/dist/output.js initial modified

> vt run sub-pkg#dotdot-positive-negative
~/packages/sub-pkg$ vtt print-file ../shared/src/utils.ts ../shared/dist/output.js ◉ cache hit, replaying
export const shared = 'initial';
// initial output

---
vt run: cache hit, <duration> saved.
